.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/AA_Alternative_email__c.field-meta.xml
<CustomField>
    <fullName>AA_Alternative_email__c</fullName>
    <label>Alternative Email</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>payroll.adelaide@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>accounts.adelaide@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>candidatemanagement.adelaide@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>education.adelaide@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>info.perth@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>recruitment.wa@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>bookings.perth@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>wa.finance@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>accounts.perth@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>candidatemanagement.perth@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>education.perth@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>info.adelaide@allianceextrastaff.com.au</fullName>
            </value>
            <value>
                <fullName>recruitment.adelaide@allianceextrastaff.com.au</fullName>
            </value>
            <value>
                <fullName>allocation.adelaide@allianceextrastaff.com.au</fullName>
            </value>
            <value>
                <fullName>timesheets@allianceextrastaff.com.au</fullName>
            </value>
            <value>
                <fullName>accounts.adelaide@allianceextrastaff.com.au</fullName>
            </value>
            <value>
                <fullName>candidatemanagement.adelaide@allianceextrastaff.com.au</fullName>
            </value>
            <value>
                <fullName>education.adelaide@allianceextrastaff.com.au</fullName>
            </value>
            <value>
                <fullName>info.albury@allianceextrastaff.com.au</fullName>
            </value>
            <value>
                <fullName>candidatemanagement.albury@allianceextrastaff.com.au</fullName>
            </value>
            <value>
                <fullName>education.albury@allianceextrastaff.com.au</fullName>
            </value>
            <value>
                <fullName>info.adelaide@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>payroll.qld@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>accounts.qld@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>bookings.qld@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>info.qld@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>education.qld@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>accounts.sydney@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>education.sydney@alliancenursing.com.au</fullName>
            </value>
            <value>
                <fullName>info.sydney@alliancenursing.com.au</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>