.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/Can_Send_SMS__c.field-meta.xml
<CustomField>
    <fullName>Can_Send_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to allow User to send SMS</description>
    <inlineHelpText>Check to allow User to send SMS</inlineHelpText>
    <label>Can Send SMS</label>
    <type>Checkbox</type>
</CustomField>