.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/Delay_time_trigger__c.field-meta.xml
<CustomField>
    <fullName>Delay_time_trigger__c</fullName>
    <formula>DATETIMEVALUE(
TEXT(NOW() + 0.00069))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay time trigger</label>
    <type>DateTime</type>
</CustomField>