.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <formula>TEXT(Contact.tc9_pr__Primary_Payee_Record__r.tc9_pr__Earner_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Type</label>
    <type>Text</type>
</CustomField>