.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/GMT_Offset__c.field-meta.xml
<CustomField>
    <fullName>GMT_Offset__c</fullName>
    <formula>IF(TODAY()&gt;= (DATE( YEAR(TODAY()),4,(1*7+1)) - WEEKDAY(DATE(YEAR(TODAY()),4,8-1))) &amp;&amp;
TODAY()&lt;= (DATE( YEAR(TODAY()),10,(1*7+1)) - WEEKDAY(DATE(YEAR(TODAY()),10,8-1))),

IF(ISPICKVAL(TimeZoneSidKey,&apos;Australia/Adelaide&apos;), 9.5,
(IF(ISPICKVAL(TimeZoneSidKey,&apos;Australia/Brisbane&apos;),10, 10)))
,
IF(ISPICKVAL(TimeZoneSidKey,&apos;Australia/Adelaide&apos;), 10.5,
(IF(ISPICKVAL(TimeZoneSidKey,&apos;Australia/Brisbane&apos;),10, 11)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMT Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>