.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/SMS_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>SMS_Cost_Center__c</fullName>
    <description>Connect User to an SMS Cost Center</description>
    <inlineHelpText>Connect User to an SMS Cost Center</inlineHelpText>
    <label>SMS Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extra Staff Adelaide Allocations</fullName>
            </value>
            <value>
                <fullName>Extra Staff Adelaide General</fullName>
            </value>
            <value>
                <fullName>Extra Staff Albury Allocations</fullName>
            </value>
            <value>
                <fullName>Extra Staff Albury General</fullName>
            </value>
            <value>
                <fullName>Adelaide Nursing Allocations</fullName>
            </value>
            <value>
                <fullName>Adelaide Nursing General</fullName>
            </value>
            <value>
                <fullName>Perth Nursing Allocations</fullName>
            </value>
            <value>
                <fullName>Perth Nursing General</fullName>
            </value>
            <value>
                <fullName>Brisbane Nursing Allocations</fullName>
            </value>
            <value>
                <fullName>Brisbane Nursing General</fullName>
            </value>
            <value>
                <fullName>Sydney Nursing  Allocations</fullName>
            </value>
            <value>
                <fullName>Sydney Nursing General</fullName>
            </value>
            <value>
                <fullName>Alliance Test One</fullName>
                <isActive>false</isActive>
                <label>Alliance Test One</label>
            </value>
            <value>
                <fullName>Alliance Test Two</fullName>
                <isActive>false</isActive>
                <label>Alliance Test Two</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>