.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/tc9_ec__Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_ec__Contact_Id__c</fullName>
    <description>The record Id of the contact that this user record is related to for the purpose of accessing community components as an internal user.</description>
    <inlineHelpText>The record Id of the contact that this user record is related to for the purpose of accessing community components as an internal user.</inlineHelpText>
    <label>Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>