.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/tc9_et__Enable_Rate_Calc_Line_Rounding__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Rate_Calc_Line_Rounding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Rate Calc Line Rounding</label>
    <type>Checkbox</type>
</CustomField>