.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/tc9_et__Enable_Rate_Calc_Overriding__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Rate_Calc_Overriding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Rate Calc Overriding</label>
    <type>Checkbox</type>
</CustomField>