.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/tc9_et__Enable_Timesheet_Manager_Add_Transaction__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Timesheet_Manager_Add_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to TRUE, if the &apos;Hide Timesheet Manager Add Transaction&apos; setting within the TimeCards Config custom setting is set to TRUE, the user will be able to use the Add button to add transactions to a Timesheet</description>
    <inlineHelpText>When set to TRUE, if the &apos;Hide Timesheet Manager Add Transaction&apos; setting within the TimeCards Config custom setting is set to TRUE, the user will be able to use the Add button to add transactions to a Timesheet</inlineHelpText>
    <label>Enable Timesheet Manager Add Transaction</label>
    <type>Checkbox</type>
</CustomField>