.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/tc9_et__Enable_Timesheet_Manager_Revert__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Timesheet_Manager_Revert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to TRUE, if the &apos;Hide Timesheet Manager Revert&apos; setting within the TimeCards Config custom setting is set to TRUE, the user will be able to use the &quot;Revert To New&quot; button</description>
    <inlineHelpText>When set to TRUE, if the &apos;Hide Timesheet Manager Revert&apos; setting within the TimeCards Config custom setting is set to TRUE, the user will be able to use the &quot;Revert To New&quot; button</inlineHelpText>
    <label>Enable Timesheet Manager Revert</label>
    <type>Checkbox</type>
</CustomField>