.vscode/allianceuat_compare/force-app/main/default/objects/User/fields/tc9_et__Phone_for_Clients__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Phone_for_Clients__c</fullName>
    <description>Defines the phone number that clients can contact the User on</description>
    <inlineHelpText>Defines the phone number that clients can contact the User on</inlineHelpText>
    <label>Phone for Clients</label>
    <type>Phone</type>
</CustomField>