.vscode/allianceuat_compare/force-app/main/default/objects/User/listViews/API_Users.listView-meta.xml
<ListView>
    <fullName>API_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>API</value>
    </filters>
    <label>API Users</label>
    <language>en_US</language>
</ListView>