.vscode/allianceuat_compare/force-app/main/default/objects/User/listViews/Users_Created_Today.listView-meta.xml
<ListView>
    <fullName>Users_Created_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TIMEZONE</columns>
    <columns>SMS_Cost_Center__c</columns>
    <columns>Can_Send_SMS__c</columns>
    <columns>AA_Alternative_email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Users Created Today</label>
    <language>en_US</language>
</ListView>